Closed Bug 1209731 Opened 10 years ago Closed 10 years ago

Return DrawResult::NOT_READY from PaintBackgroundWithSC if we couldn't prepare the nsImageRenderer

Categories

(Core :: Layout: Images, Video, and HTML Frames, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox44 --- fixed

People

(Reporter: seth, Assigned: seth)

References

Details

Attachments

(1 file, 1 obsolete file)

I noticed when debugging border-image sync decoding issues that we need to return DrawResult::NOT_READY in the border-image case if we couldn't prepare the nsImageRenderer, because that means we should try to paint again if we do a paint where we're sync decoding images. It seems to me that we should also be doing that in PaintBackgroundWithSC.
Here's the patch. Very simple, but again, I think it's best to isolate this to a separate bug in case there are regressions.
Attachment #8667532 - Flags: review?(tnikkel)
Sadly this has to get a bit more complicated, because we really have to be able to distinguish recoverable from nonrecoverable issues in PrepareImage(). At some point I'd like to rework how this whole thing works, but I think this is the cleanest things can be without some substantial refactoring.
Attachment #8670646 - Flags: review?(tnikkel)
Attachment #8667532 - Attachment is obsolete: true
Attachment #8667532 - Flags: review?(tnikkel)
Try looks good.
Attachment #8670646 - Flags: review?(tnikkel) → review+
Thanks for the review!
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Product: Core → Core Graveyard
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: